# fastapi

./: Dockerfile  main.py  pyproject.toml  railway.json  requirements.txt
