[tool.poetry]
name = "ytd-server"
version = "0.0.0"
description = "YouTube downloader server"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
yt-dlp = "^2023.10.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
